# RotaryRage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SimpleFlowChart.drawio
include/: bouncer.h  encoder.h
src/: bouncer.cpp  encoder.cpp  main.cpp
test/: foo.cpp  test_bouncer.cpp
